kubernetes/monitoring/homeprod/kube-prometheus-stack/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alertmanager
  namespace: prometheus
spec:
  podSelector:
    matchLabels:
      alertmanager: kube-prom
      app.kubernetes.io/instance: kube-prom
      app.kubernetes.io/managed-by: prometheus-operator
      app.kubernetes.io/name: alertmanager
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kubernetes-ingress
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flux-system
          podSelector:
            matchLabels:
              app: notification-controller
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hermes-agent
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: hermes-agent
              app.kubernetes.io/instance: hermes-agent-hermes-agent
              app.kubernetes.io/name: hermes-agent-hermes-agent
      ports:
        - port: 9093
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8080
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gotify
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: gotify-alertmanager
              app.kubernetes.io/instance: gotify-gotify-alertmanager
              app.kubernetes.io/name: gotify-gotify-alertmanager
      ports:
        - port: 8899
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gotify
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: gotify
              app.kubernetes.io/instance: gotify-gotify
              app.kubernetes.io/name: gotify-gotify
      ports:
        - port: 80
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: alertmanager-dashboard
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: receiver
      ports:
        - port: 8080
          protocol: TCP
    - to: # healthchecks.io
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
          - "${HAPROXY_WHITELIST}"
      ports:
        - port: 443
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-state-metrics
  namespace: prometheus
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus-kube-prometheus-stack
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/part-of: kube-state-metrics
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8080
          protocol: TCP
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-state-metrics
  namespace: prometheus
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus-kube-prometheus-stack
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/part-of: kube-state-metrics
  egress:
    - toEntities:
      - kube-apiserver
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus
  namespace: prometheus
spec:
  podSelector:
    matchLabels:
      prometheus: kube-prom
      app.kubernetes.io/instance: kube-prom
      app.kubernetes.io/managed-by: prometheus-operator
      app.kubernetes.io/name: prometheus
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kubernetes-ingress
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hermes-agent
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: hermes-agent
              app.kubernetes.io/instance: hermes-agent-hermes-agent
              app.kubernetes.io/name: hermes-agent-hermes-agent
      ports:
        - port: 9090
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              alertmanager: kube-prom
              app.kubernetes.io/instance: kube-prom
              app.kubernetes.io/managed-by: prometheus-operator
              app.kubernetes.io/name: alertmanager
      ports:
        - port: 9093
          protocol: TCP
    - to:
        - namespaceSelector: {}
    - to: # External node-exporters
      - ipBlock:
          cidr: "${HAPROXY_WHITELIST}"
      ports:
        - port: 8404 # Haproxy
          protocol: TCP
        - port: 9100 # Node-exporter
          protocol: TCP
        - port: 9153 # DNSMasq
          protocol: TCP
        - port: 9586 # Wireguard
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus
  namespace: prometheus
spec:
  endpointSelector:
    matchLabels:
      prometheus: kube-prom
      app.kubernetes.io/instance: kube-prom
      app.kubernetes.io/managed-by: prometheus-operator
      app.kubernetes.io/name: prometheus
  egress:
    - toEntities:
      - host
      - kube-apiserver
      - remote-node
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-stack-admission-create
  namespace: prometheus
spec:
  endpointSelector:
    matchLabels:
      app: kube-prometheus-stack-admission-create
      app.kubernetes.io/component: prometheus-operator-webhook
      app.kubernetes.io/instance: prometheus-kube-prometheus-stack
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
  egress:
    - toEntities:
      - kube-apiserver
  ingress:
    - fromEntities:
      - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-stack-admission-patch
  namespace: prometheus
spec:
  endpointSelector:
    matchLabels:
      app: kube-prometheus-stack-admission-patch
      app.kubernetes.io/component: prometheus-operator-webhook
      app.kubernetes.io/instance: prometheus-kube-prometheus-stack
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
  egress:
    - toEntities:
      - kube-apiserver
  ingress:
    - fromEntities:
      - kube-apiserver
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-stack-operator
  namespace: prometheus
spec:
  podSelector:
    matchLabels:
      app: kube-prometheus-stack-operator
      app.kubernetes.io/component: prometheus-operator
      app.kubernetes.io/instance: prometheus-kube-prometheus-stack
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 10250
          protocol: TCP
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-stack-operator
  namespace: prometheus
spec:
  endpointSelector:
    matchLabels:
      app: kube-prometheus-stack-operator
      app.kubernetes.io/component: prometheus-operator
      app.kubernetes.io/instance: prometheus-kube-prometheus-stack
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
  egress:
    - toEntities:
      - kube-apiserver
  ingress:
    - fromEntities:
      - kube-apiserver
